--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             </ul>
         </section>
         <section class="image-slider">
-            <ul id="image_slider">
+<!--             <ul id="image_slider">
                 <li><img class="slider-image" src="resources/pets.jpg"></li>
                 <li><img class="slider-image" src="resources/adirondacks.jpg"></li>
                 <li><img class="slider-image" src="resources/adirondacks.jpg"></li>
             </ul> 
-        </section>
+ -->        </section>
  <!--         <section class="projects">
             <article id="courses">
                 <h2>Sample curriculum of full-stack Java courses</h2>
