Working on carousel

--- a/index.html
+++ b/index.html
@@ -54,12 +54,19 @@
             </ul>
         </section>
         <section class="image-slider">
-<!--             <ul id="image_slider">
-                <li><img class="slider-image" src="resources/pets.jpg"></li>
-                <li><img class="slider-image" src="resources/adirondacks.jpg"></li>
-                <li><img class="slider-image" src="resources/adirondacks.jpg"></li>
-            </ul> 
- -->        </section>
+            <div class="carousel-1">
+                <img class="slider1-image" src="resources/pets.jpg">
+                <img class="slider1-image" src="resources/pets2.jpg">
+                <img class="slider1-image" src="resources/portfolio-picture.jpg">
+                <img class="slider1-image" src="resources/adirondacks.jpg">
+            </div>
+            <div class="carousel-2">
+                <img class="slider2-image" src="resources/pets2.jpg">
+                <img class="slider2-image" src="resources/portfolio-picture.jpg">
+                <img class="slider2-image" src="resources/adirondacks.jpg">
+                <img class="slider2-image" src="resources/pets.jpg">
+            </div>
+        </section>
  <!--         <section class="projects">
             <article id="courses">
                 <h2>Sample curriculum of full-stack Java courses</h2>
