--- a/index.html
+++ b/index.html
@@ -55,16 +55,22 @@
         </section>
         <section class="image-slider">
             <div class="carousel-1">
-                <img class="slider1-image" src="resources/pets.jpg">
-                <img class="slider1-image" src="resources/pets2.jpg">
-                <img class="slider1-image" src="resources/portfolio-picture.jpg">
-                <img class="slider1-image" src="resources/adirondacks.jpg">
+                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/pets.jpg"></a>
+                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/pets2.jpg"></a>
+                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/portfolio-picture.jpg"></a>
+                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/adirondacks.jpg"></a>
             </div>
             <div class="carousel-2">
                 <img class="slider2-image" src="resources/pets2.jpg">
                 <img class="slider2-image" src="resources/portfolio-picture.jpg">
                 <img class="slider2-image" src="resources/adirondacks.jpg">
                 <img class="slider2-image" src="resources/pets.jpg">
+            </div>
+            <div class="carousel-3">
+                <img class="slider3-image" src="resources/portfolio-picture.jpg">
+                <img class="slider3-image" src="resources/adirondacks.jpg">
+                <img class="slider3-image" src="resources/pets.jpg">
+                <img class="slider3-image" src="resources/pets2.jpg">
             </div>
         </section>
  <!--         <section class="projects">
