Building out image carousel

--- a/index.html
+++ b/index.html
@@ -53,27 +53,20 @@
                 <li class="items" id="listitem15">Everything</li>
             </ul>
         </section>
-        <section class="image-slider">
-            <div class="carousel-1">
-                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/pets.jpg"></a>
-                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/pets2.jpg"></a>
-                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/portfolio-picture.jpg"></a>
-                <a href="https://www.facebook.com"><img class="slider1-image" src="resources/adirondacks.jpg"></a>
-            </div>
-            <div class="carousel-2">
-                <img class="slider2-image" src="resources/pets2.jpg">
-                <img class="slider2-image" src="resources/portfolio-picture.jpg">
-                <img class="slider2-image" src="resources/adirondacks.jpg">
-                <img class="slider2-image" src="resources/pets.jpg">
-            </div>
-            <div class="carousel-3">
-                <img class="slider3-image" src="resources/portfolio-picture.jpg">
-                <img class="slider3-image" src="resources/adirondacks.jpg">
-                <img class="slider3-image" src="resources/pets.jpg">
-                <img class="slider3-image" src="resources/pets2.jpg">
-            </div>
+        <section class="carousel">
+            <section class="image-carousel">
+                <div class="inner">
+                    <img class="slider1-image" src="resources/pets.jpg">
+                    <img class="slider1-image" src="resources/pets2.jpg">
+                    <img class="slider1-image" src="resources/portfolio-picture.jpg">
+                    <img class="slider1-image" src="resources/adirondacks.jpg">
+                </div>
+                <nav class="bubbles"></nav>
+                <nav class="prev"></nav>
+                <nav class="next"></nav>
+            </section>
         </section>
- <!--         <section class="projects">
+<!--         <section class="projects">
             <article id="courses">
                 <h2>Sample curriculum of full-stack Java courses</h2>
                 <section class="course-pictures">
