Almost done with carousel

--- a/index.html
+++ b/index.html
@@ -56,10 +56,22 @@
         <section class="carousel">
             <section class="image-carousel">
                 <div class="inner">
-                    <img class="slider1-image" src="resources/pets.jpg">
-                    <img class="slider1-image" src="resources/pets2.jpg">
-                    <img class="slider1-image" src="resources/portfolio-picture.jpg">
-                    <img class="slider1-image" src="resources/adirondacks.jpg">
+                    <figure>
+                        <img class="image" src="resources/pets.jpg">
+                        <figcaption>Pet Shelter</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="image" src="resources/pets2.jpg">
+                        <figcaption>Shithole Hospital</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="image" src="resources/portfolio-picture.jpg">
+                        <figcaption>Me</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="image" src="resources/adirondacks.jpg">
+                        <figcaption>Adirondacks</figcaption>
+                    </figure>
                 </div>
                 <nav class="bubbles"></nav>
                 <nav class="prev"></nav>
