Working on projects page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section class="dropdown">
                 <button class="menu">Menu</button>
                 <nav id="myDropdown" class="dropdown-content">
-                    <a id="link2" href="#projects">Projects</a>
+                    <a id="link2" href="./projects.html">Projects</a>
                 </nav>
             </section>
 <!--            <button class="dropbtn">MENU</button>
@@ -58,19 +58,21 @@
                 <div class="inner">
                     <figure>
                         <img class="image" src="resources/pets.jpg">
-                        <figcaption>Pet Shelter</figcaption>
+                        <a id="review" href="https://github.com/Cooksey3/virtual-pets-amok">
+                            <figcaption>Pet Shelter</figcaption>
+                        </a>
                     </figure>
                     <figure>
-                        <img class="image" src="resources/pets2.jpg">
-                        <figcaption>Shithole Hospital</figcaption>
+                            <img class="image" src="resources/harrypotter.jpg">
+                        <a id="review" href="https://github.com/Cooksey3/full-stack-reviews">
+                            <figcaption>Book Review Site</figcaption>
+                        </a>
                     </figure>
                     <figure>
                         <img class="image" src="resources/portfolio-picture.jpg">
-                        <figcaption>Me</figcaption>
-                    </figure>
-                    <figure>
-                        <img class="image" src="resources/adirondacks.jpg">
-                        <figcaption>Adirondacks</figcaption>
+                        <a id="review" href="https://github.com/Cooksey3/">
+                            <figcaption>Me</figcaption>
+                        </a>
                     </figure>
                 </div>
                 <nav class="bubbles"></nav>
@@ -78,38 +80,7 @@
                 <nav class="next"></nav>
             </section>
         </section>
-<!--         <section class="projects">
-            <article id="courses">
-                <h2>Sample curriculum of full-stack Java courses</h2>
-                <section class="course-pictures">
-                    <img id="courses" src="resources/courses.jpg" width="60%" height="450";>
-                    <img id="course" src="resources/course.jpg" width="25%" height="450";>
-                </section>
-                <nav class="more-info">More project info can be found at: <a href="https://github.com/Cooksey3/courses">Courses</a></nav>
-                <p class="skills-used">Skills used: TDD, OOP, Java, HTML, Spring</p>
-            </article>
-            <article id="pet">
-                <h2>Virtual pet shelter to simulate caring for pets</h2>
-                <section class="pets-app">
-                    <p class="beginning">Admit cats and dogs to the pet shelter</p>
-                    <img id="pets" src="resources/pets.jpg" width="70%" height="450";>
-                    <p class="pet-interactions">Choose to interact with pets from many options</p>
-                    <img id="pets2" src="resources/pets2.jpg" width="70%" height="450";>
-                </section>
-                <nav class="more-info">More project info can be found at: <a href="https://github.com/Cooksey3/virtual-pets-amok">Virtual Pets Amok!</a></nav>
-                <p class="skills-used">Skills used: TDD, OOP, Java</p>
-            </article> 
-            <article id="hospital">
-                <h2>Hospital employee database</h2>
-                <section class="hospital-app">
-                    <p>Track employee information, including the responsibilities of each employee</p>
-                    <img id="course" src="resources/hospital.jpg" width="40%" height="450";>
-                </section>
-                <nav class="more-info">More project info can be found at: <a href="https://github.com/Cooksey3/hospital">Hospital</a></nav>
-                <p class="skills-used">Skills used: TDD, OOP, Java</p>
-            </article>
-        </section>
- -->    <footer class="footer">
+    <footer class="footer">
             <button class="trigger">About me</button>
             <section class="about-me">
                 <div class="modal-content">
