Finished description dropdown

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container-home">
         <header id="header" class="header">
             <h1 class="name">Chris Cooksey</h1>
             <section class="dropdown">
@@ -23,11 +23,6 @@
                     <a id="link2" href="./projects.html">Projects</a>
                 </nav>
             </section>
-<!--            <button class="dropbtn">MENU</button>
-                <nav class=".dropdown-content">
-
-                </nav>
-            </section> -->
         </header>
         <section id="about-me">
             <img id="picture" src="resources/adirondacks.jpg">
@@ -80,7 +75,7 @@
                 <nav class="next"></nav>
             </section>
         </section>
-    <footer class="footer">
+        <footer class="footer">
             <button class="trigger">About me</button>
             <section class="about-me">
                 <div class="modal-content">
