Removed some extraneous code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="items" id="listitem9">Flexbox</li>
                 <li class="items" id="listitem10">jQuery</li>
         	</ul>
-            <ul class="other">Relational:
+            <ul class="other">Other:
                 <li class="items" id="listitem11">Git</li>
                 <li class="items" id="listitem12">Leadership</li>
                 <li class="items" id="listitem13">Presentation</li>
