--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
         </footer>
     </div>
     <script src="./src/js/app.js"></script>
+    <script src="./src/js/modal.js"></script>
 </body>
 </html>
