Added links in description to github

--- a/projects.html
+++ b/projects.html
@@ -30,21 +30,21 @@
 					<img class="project-image" src="resources/harrypotter.jpg">
 					<section class="project-dropdown">
 		                <button class="description">Description</button>
-		                <p class="dropdown-content">Full stack, book review site. Search books based on genre. Created using Spring MVC, Java, CSS, Flex</p>
+		                <p class="dropdown-content">Full stack, book review site. Search books based on genre. Created using Spring MVC, Java, CSS, Flex <a class="review" href="https://github.com/Cooksey3/full-stack-reviews">More info</a></p>
 		            </section>
 				</div>
 				<div class="card">
 					<img class="project-image" src="resources/virtualpets.jpg">
 					<section class="project-dropdown">
 		                <button class="description">Description</button>
-		                <p class="dropdown-content">Simulated virtual pet shelter, allowing the user to care for pets through console interaction. Created using Java, TDD, pair programming</p>
+		                <p class="dropdown-content">Simulated virtual pet shelter, allowing the user to care for pets through console interaction. Created using Java, TDD, pair programming <a class="review" href="https://github.com/Cooksey3/virtual-pets-amok">More info</a></p>
 		            </section>
 				</div>
 				<div class="card">
 					<img class="project-image" src="resources/catalogue.jpg">
 					<section class="project-dropdown">
 		                <button class="description">Description</button>
-		                <p class="dropdown-content">Sample course catalogue. Created using Spring MVC, Java, TDD</p>
+		                <p class="dropdown-content">Sample course catalogue. Created using Spring MVC, Java, TDD <a class="review" href="https://github.com/Cooksey3/courses">More info</a></p>
 		            </section>
 				</div>
 			</div>
