fixed skills spacing

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         </header>
         <section id="about-me">
             <img id="picture" src="resources/adirondacks.jpg">
+            <!-- <div class="skills"> -->
+        </section>
+        <section id="skills">
             <ul class="back-end">Back end:
                 <li class="items" id="listitem1">Java</li>
                 <li class="items" id="listitem2">OOP</li>
@@ -45,35 +48,8 @@
                 <li class="items" id="listitem12">Leadership</li>
                 <li class="items" id="listitem13">Presentation</li>
                 <li class="items" id="listitem14">Management</li>
-                <li class="items" id="listitem15">Everything</li>
+                <li class="items" id="listitem15">Communication</li>
             </ul>
-        </section>
-        <section class="carousel">
-            <section class="image-carousel">
-                <div class="inner">
-                    <figure>
-                        <img class="image" src="resources/pets.jpg">
-                        <a id="review" href="https://github.com/Cooksey3/virtual-pets-amok">
-                            <figcaption>Pet Shelter</figcaption>
-                        </a>
-                    </figure>
-                    <figure>
-                            <img class="image" src="resources/harrypotter.jpg">
-                        <a id="review" href="https://github.com/Cooksey3/full-stack-reviews">
-                            <figcaption>Book Review Site</figcaption>
-                        </a>
-                    </figure>
-                    <figure>
-                        <img class="image" src="resources/portfolio-picture.jpg">
-                        <a id="review" href="https://github.com/Cooksey3/">
-                            <figcaption>Me</figcaption>
-                        </a>
-                    </figure>
-                </div>
-                <nav class="bubbles"></nav>
-                <nav class="prev"></nav>
-                <nav class="next"></nav>
-            </section>
         </section>
         <footer class="footer">
             <button class="trigger">About me</button>
