--- a/projects.html
+++ b/projects.html
@@ -24,31 +24,29 @@
                 </nav>
             </section>
         </header>
-        <section class="projects">
-        	<div class="cards">
-	        	<div class="card">
-					<img class="project-image" src="resources/harrypotter.jpg">
-					<section class="project-dropdown">
-		                <button class="description">Description</button>
-		                <p class="dropdown-content">Full stack, book review site. Search books based on genre. Created using Spring MVC, Java, CSS, Flex <a class="review" href="https://github.com/Cooksey3/full-stack-reviews">More info</a></p>
-		            </section>
-				</div>
-				<div class="card">
-					<img class="project-image" src="resources/virtualpets.jpg">
-					<section class="project-dropdown">
-		                <button class="description">Description</button>
-		                <p class="dropdown-content">Simulated virtual pet shelter, allowing the user to care for pets through console interaction. Created using Java, TDD, pair programming <a class="review" href="https://github.com/Cooksey3/virtual-pets-amok">More info</a></p>
-		            </section>
-				</div>
-				<div class="card">
-					<img class="project-image" src="resources/catalogue.jpg">
-					<section class="project-dropdown">
-		                <button class="description">Description</button>
-		                <p class="dropdown-content">Sample course catalogue. Created using Spring MVC, Java, TDD <a class="review" href="https://github.com/Cooksey3/courses">More info</a></p>
-		            </section>
-				</div>
+    	<section class="cards">
+        	<div class="card">
+				<img class="project-image" src="resources/harrypotter.jpg">
+				<section class="project-dropdown">
+	                <button class="description">Description</button>
+	                <p class="dropdown-content">Full stack, book review site. Search books based on genre. Created using Spring MVC, Java, CSS, Flex <a class="review" href="https://github.com/Cooksey3/full-stack-reviews">More info</a></p>
+	            </section>
 			</div>
-        </section>
+			<div class="card">
+				<img class="project-image" src="resources/virtualpets.jpg">
+				<section class="project-dropdown">
+	                <button class="description">Description</button>
+	                <p class="dropdown-content">Simulated virtual pet shelter, allowing the user to care for pets through console interaction. Created using Java, TDD, pair programming <a class="review" href="https://github.com/Cooksey3/virtual-pets-amok">More info</a></p>
+	            </section>
+			</div>
+			<div class="card">
+				<img class="project-image" src="resources/catalogue.jpg">
+				<section class="project-dropdown">
+	                <button class="description">Description</button>
+	                <p class="dropdown-content">Sample course catalogue. Created using Spring MVC, Java, TDD <a class="review" href="https://github.com/Cooksey3/courses">More info</a></p>
+	            </section>
+            </div>
+		</section>
         <footer class="footer">
             <button class="trigger">About me</button>
             <section class="about-me">
