--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </footer>
     </div>
     <script src="./src/js/app.js"></script>
-    <script src="./src/js/modal.js"></script>
+    <!-- <script src="./src/js/modal.js"></script> -->
+    <script src="./src/js/skills.js"></script>
 </body>
 </html>
