Added Garden App project

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,13 @@
             </section>
         </header>
     	<section class="cards">
+            <div class="card">
+                <img class="project-image" src="resources/harrypotter.jpg">
+                <section class="project-dropdown">
+                    <button class="description">Description</button>
+                    <p class="dropdown-content">Full-stack garden-planning app for beginning gardeners. Created using Spring, Java, CSS, Flexbox/Grid, Pair Programming, Scrum, agile, and JavaScript <a class="review" href="https://github.com/Cooksey3/full-stack-reviews">More info</a></p>
+                </section>
+            </div>
         	<div class="card">
 				<img class="project-image" src="resources/harrypotter.jpg">
 				<section class="project-dropdown">
