--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,10 @@
         </header>
     	<section class="cards">
             <div class="card">
-                <img class="project-image" src="resources/harrypotter.jpg">
+                <img class="project-image" src="resources/garden.png">
                 <section class="project-dropdown">
                     <button class="description">Description</button>
-                    <p class="dropdown-content">Full-stack garden-planning app for beginning gardeners. Created using Spring, Java, CSS, Flexbox/Grid, Pair Programming, Scrum, agile, and JavaScript <a class="review" href="https://github.com/Cooksey3/full-stack-reviews">More info</a></p>
+                    <p class="dropdown-content">Full-stack garden-planning app for beginners. Created using Spring, Java, CSS, Flexbox/Grid, Pair Programming, Scrum, agile, and JavaScript <a class="review" href="https://github.com/Cooksey3/full-stack-reviews">More info</a></p>
                 </section>
             </div>
         	<div class="card">
