Changed book reviews site picture on project page

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 </section>
             </div>
         	<div class="card">
-				<img class="project-image" src="resources/harrypotter.jpg">
+				<img class="project-image" src="resources/books.jpg">
 				<section class="project-dropdown">
 	                <button class="description">Description</button>
 	                <p class="dropdown-content">Full stack, book review site. Search books based on genre. Created using Spring MVC, Java, CSS, Flex <a class="review" href="https://github.com/Cooksey3/full-stack-reviews">More info</a></p>
