Hovering over skill type displays skill

--- a/index.html
+++ b/index.html
@@ -26,29 +26,34 @@
         </header>
         <section id="about-me">
             <img id="picture" src="resources/adirondacks.jpg">
-            <!-- <div class="skills"> -->
         </section>
         <section id="skills">
             <ul class="back-end">Back end:
-                <li class="items" id="listitem1">Java</li>
-                <li class="items" id="listitem2">OOP</li>
-                <li class="items" id="listitem3">Spring</li>
-                <li class="items" id="listitem4">SQL</li>
-                <li class="items" id="listitem5">TDD</li>
+                <div class="back-end-skills">
+                    <li class="items" id="listitem1">Java</li>
+                    <li class="items" id="listitem2">OOP</li>
+                    <li class="items" id="listitem3">Spring</li>
+                    <li class="items" id="listitem4">SQL</li>
+                    <li class="items" id="listitem5">TDD</li>
+                </div>
             </ul>
         	<ul class="front-end">Front end:
-                <li class="items" id="listitem6">HTML5</li>
-                <li class="items" id="listitem7">CSS3</li>
-                <li class="items" id="listitem8">TDD</li>
-                <li class="items" id="listitem9">Flexbox</li>
-                <li class="items" id="listitem10">jQuery</li>
+                <div class="front-end-skills">
+                    <li class="items" id="listitem6">HTML5</li>
+                    <li class="items" id="listitem7">CSS3</li>
+                    <li class="items" id="listitem8">TDD</li>
+                    <li class="items" id="listitem9">Flexbox</li>
+                    <li class="items" id="listitem10">jQuery</li>
+                </div>
         	</ul>
             <ul class="other">Other:
-                <li class="items" id="listitem11">Git</li>
-                <li class="items" id="listitem12">Leadership</li>
-                <li class="items" id="listitem13">Presentation</li>
-                <li class="items" id="listitem14">Management</li>
-                <li class="items" id="listitem15">Communication</li>
+                <div class="other-skills">
+                    <li class="items" id="listitem11">Git</li>
+                    <li class="items" id="listitem12">Leadership</li>
+                    <li class="items" id="listitem13">Presentation</li>
+                    <li class="items" id="listitem14">Management</li>
+                    <li class="items" id="listitem15">Communication</li>
+                </div>
             </ul>
         </section>
         <footer class="footer">
@@ -66,7 +71,7 @@
             </div>
         </footer>
     </div>
-    <script src="./src/js/app.js"></script>
+    <script src="./src/js/projects.js"></script>
     <script src="./src/js/modal.js"></script>
 </body>
 </html>
